<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>RoyaleProtectionBlocks</groupId>
	<artifactId>RoyaleProtectionBlocks</artifactId>
	<version>1.10.2 Alpha</version>
	<name>RoyaleProtectionBlocks</name>
	<description>Create and use protection blocks to secure your buildings</description>
	<properties>
		<maven.test.skip>true</maven.test.skip>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<project.author>DarkPanda73</project.author>
		<project.package>royale</project.package>
		<project.spigotVersion>${project.version} FIX</project.spigotVersion>
	</properties>
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>jitpack-repo</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>sirblobman-public</id>
			<url>https://nexus.sirblobman.xyz/public/</url>
		</repository>
		<repository>
			<id>CodeMC</id>
			<url>https://repo.codemc.org/repository/maven-public/</url>
		</repository>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/repository/public/</url>
		</repository>
		<repository>
			<id>essentials-releases</id>
			<url>https://repo.essentialsx.net/releases/</url>
		</repository>
		<repository>
			<id>paper-repo</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>dev.espi</groupId>
			<artifactId>protectionstones</artifactId>
			<version>2.10.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.16.5-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.LoneDev6</groupId>
			<artifactId>api-itemsadder</artifactId>
			<version>3.5.0b</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.24</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.relampagorojo93</groupId>
			<artifactId>RoyaleProtectionBlocksAPI</artifactId>
			<version>0.0.1-Alpha</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>RelaUtils</groupId>
			<artifactId>RelaUtils</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>SpigotPlugin</groupId>
			<artifactId>SpigotPlugin</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaPlugin</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaAPIs</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaCommandsModule</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaColors</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaUtilities</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaSQLModule</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaRecipes</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaYaml</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaFilesModule</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaInventories</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaPlayerDataModule</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaJavaUtilities</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaUpdateChecker</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaBStats</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaEventCustomizer</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaDiscordWebhook</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaPermissionsModule</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaLoggingModule</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaMessageListenerModule</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>PandaUtils</groupId>
			<artifactId>PandaEconomiesModule</artifactId>
			<version>0.0.1 Alpha</version>
		</dependency>
		<dependency>
			<groupId>YAMLLib</groupId>
			<artifactId>YAMLLib</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.timderspieler</groupId>
			<artifactId>DeluxeCombat-API</artifactId>
			<version>1.5.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.luckperms</groupId>
			<artifactId>api</artifactId>
			<version>5.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.Realizedd</groupId>
			<artifactId>TokenManager</artifactId>
			<version>3.2.4</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>*</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.sirblobman.api</groupId>
			<artifactId>core</artifactId>
			<version>2.9-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.sirblobman.combatlogx</groupId>
			<artifactId>api</artifactId>
			<version>11.4-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.comphenix.protocol</groupId>
			<artifactId>ProtocolLib</artifactId>
			<version>5.3.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.oraxen</groupId>
			<artifactId>oraxen</artifactId>
			<version>1.159.0</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>gs.mclo</groupId>
					<artifactId>mclogs</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.ticxo</groupId>
					<artifactId>PlayerAnimator</artifactId>
				</exclusion>
				<exclusion>
					<groupId>me.gabytm.util</groupId>
					<artifactId>actions-spigot</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.kyori</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.jeff_media</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>me.NoChance.PvPManager</groupId>
			<artifactId>pvpmanager</artifactId>
			<version>3.18.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.essentialsx</groupId>
			<artifactId>EssentialsX</artifactId>
			<version>2.19.0</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.bstats</groupId>
					<artifactId>bstats-bukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<defaultGoal>install</defaultGoal>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<outputDirectory>E:/Eclipse/Exports</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<relocations>
								<relocation>
									<pattern>org.bstats</pattern>
									<shadedPattern>
										${project.package}.${project.groupId}.PandaUtils.bStats</shadedPattern>
								</relocation>
								<relocation>
									<pattern>javax.annotation</pattern>
									<shadedPattern>
										${project.package}.${project.groupId}.PandaUtils.ExternalLibs.javax.annotation</shadedPattern>
								</relocation>
								<relocation>
									<pattern>javassist</pattern>
									<shadedPattern>
										${project.package}.${project.groupId}.PandaUtils.ExternalLibs.javassist</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.reflections</pattern>
									<shadedPattern>
										${project.package}.${project.groupId}.PandaUtils.ExternalLibs.org.reflections</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.slf4j</pattern>
									<shadedPattern>
										${project.package}.${project.groupId}.PandaUtils.ExternalLibs.org.slf4j</shadedPattern>
								</relocation>
								<relocation>
									<pattern>relampagorojo93.LibsCollection</pattern>
									<shadedPattern>
										${project.package}.${project.groupId}.LibsCollection</shadedPattern>
								</relocation>
								<relocation>
									<pattern>darkpanda73.LibsCollection</pattern>
									<shadedPattern>
										${project.package}.${project.groupId}.LibsCollection</shadedPattern>
								</relocation>
								<relocation>
									<pattern>darkpanda73.PandaUtils</pattern>
									<shadedPattern>
										${project.package}.${project.groupId}.PandaUtils</shadedPattern>
								</relocation>
								<relocation>
									<pattern>company.pluginName</pattern>
									<shadedPattern>
										${project.package}.${project.groupId}.Plugin</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>